Changes in QMPlay2 build 16.05.25:
	- update Russian translation (victorr2007),
	- minor fixes in FPS and A/V sync,
	- fix "rawvideo" playback,
	- bugfix,

Changes in QMPlay2 build 16.05.06:
	- split muted icon to muted and not muted,
	- bugfix,

Changes in QMPlay2 build 16.05.02:
	- fixed command line argument processing (now is possible to properly open or enqueue multiple files on Linux),
	- playlist uses floating-point variables for storing length (accurate group length information),
	- added audio balance (right click on volume slider to split channels),
	- don't play next entry after playback error by default,
	- fix restoring dock widgets state and window geometry,
	- added YouTube playlists and subtitles,
	- restore mute state on start-up,
	- seeking improvements,
	- bugfix,

Changes in QMPlay2 build 16.04.23:
	- VDPAU decoder without VDPAU writer is now available (disabled by default),
	- added spherical view for video playback (Ctrl+3; OpenGL only),
	- added Simplified Chinese translation (king Lee),
	- move video filtering to separate thread,
	- added Yadif deinterlacing filter,
	- better frame skipping,
	- replay gain fixes,
	- bugfix,

Changes in QMPlay2 build 16.03.24:
	- XVideo SHM and OpenGL2(Qt >= 5.6) bugfix,
	- Bob deint bugfix for odd video height/2,

Changes in QMPlay2 build 16.03.11:
	- update Russian translation (victorr2007),
	- update ProstoPleer address,

Changes in QMPlay2 build 16.03.08:
	- feature: suspend the computer after playback is finished,
	- fix VA-API driver Intel >= 1.6.2 video filtering,
	- fix slow seeking on some slow network streams,
	- zero-copy demuxing and decoding (if possible),
	- updated Russian translation (victorr2007),
	- 90°/270° video rotation (OpenGL only),
	- visualization and VDPAU/DDraw bugfix,
	- feature: A-B Repeat,
	- OpenGL 2 bugfix,

Changes in QMPlay2 build 16.02.08:
	- play multiple streams in FFmpeg, YouTube can play different audio/video streams together,