@@ -1623,6 +1623,10 @@ It copies decoded video frame to system RAM, so it can be slow!</source>
         <source>A&amp;-B Repeat</source>
         <translation>&amp;Повторять A-Б</translation>
     </message>
+    <message>
+        <source>Detach from receiving &amp;commands</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Playlist</name>
